# arkade

./: .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  REFERENCE.md  cmake_install.cmake
include/: actions.h  arguments.h  hashmap.h  json_builder.h  process_handler.h  sds.h  util.h  vector.h
include/toml/: ast.h  lexer.h  load.h  parser.h  sourcefile.h  token.h  toml.h
includes/: actions.h  arguments.h  hashmap.h  json_builder.h  sds.h  util.h  vector.h
includes/toml/: ast.h  lexer.h  load.h  parser.h  sourcefile.h  token.h  toml.h
misc/: ideas.md  todo.md
publish_test/: Ark.toml
src/: actions.c  arguments.c  hashmap.c  json_builder.c  main.c  process_handler.c  sds.c  util.c  vector.c
src/actions/: build_action.c  fetch_action.c  help_action.c  login_action.c  new_action.c  publish_action.c  update_action.c
src/toml/: ast.c  lexer.c  load.c  parser.c  sourcefile.c  token.c  toml.c
tests/new_test/: ark.toml
tests/sanity/: sanity.toml
tests/sanity/src/: main.ark
toml_test/: realistic_test.toml  test.toml
